fixing classpath